@@ -9,5 +9,6 @@ CMD="g++ -o driver -Wall -I../ driver.cc -L../tmp -lbigint -lbobcat -s"
 echo $CMD
 $CMD || exit 1
 
+echo Ready...
 driver
 
