@@ -2,12 +2,12 @@
 
 ostream &BigInt::insertInto(ostream &out) const
 {
+    int flags = out.flags();
     char *cp = 
         (
-            out.flags() & ios::dec ?        // No oct conversion
-                BN_bn2dec
-            :
-                BN_bn2hex
+            flags & ios::hex ? BN_bn2hex :
+            flags & ios::oct ? bn2oct    :
+                               BN_bn2dec
         )(&d_bn);
 
     bool isNegative = (*cp == '-');
@@ -17,15 +17,18 @@ ostream &BigInt::insertInto(ostream &out) const
     while (*skipZeroes == '0')              // cut off leading zeros
         ++skipZeroes;
 
-    if (cp + isNegative + 1 == skipZeroes)  // if just 1 char: keep it.
-        --skipZeroes;
+    if ((flags & ios::oct) || *skipZeroes == 0) // if just 1 char or oct: 
+        --skipZeroes;                           // keep 1 '0'
 
     if (isNegative)
         *--skipZeroes = '-';                // restore the '-'
 
     out << skipZeroes;                      // insert the value
 
-    OPENSSL_free(cp);
+    if (flags & ios::oct)
+        delete[] cp;
+    else
+        OPENSSL_free(cp);
 
     return out;
 }
