@@ -1,6 +1,7 @@
 bobcat (2.05.00)    ISN
 
-  * BigInt values inserted into streams do not print leading zeroes anymore
+  * BigInt values inserted into streams do not show leading zeroes anymore, 
+    except for octal values.
   * BigInt values can be assigned a value from a textual representation
   * BigInt values can be extracted from std::istream objects.
   * Added MD_CTX initialization and cleanup calls to DigestBuf
